Fix cart items container overflowing. Improve readability.

--- a/src/sass/components/_cart.scss
+++ b/src/sass/components/_cart.scss
@@ -16,113 +16,116 @@
         color: $red;
       }
     }
-    .cart-items-container {
-      padding: 0 32px;
+    .cart-items-wrapper {
       grid-area: items;
-      display: flex;
-      flex-direction: column;
       height: 100%;
-      width: 100%;
-      .cart-item-wrapper {
-        position: relative;
-        padding: 4px 0;
-        border-bottom: 1px solid rgba(66, 66, 67, 0.2);
+      overflow-y: scroll;
+      padding-bottom: 4px;
+      .cart-items-container {
+        padding: 0 32px;
         display: flex;
-        justify-content: space-between;
-        align-items: center;
+        flex-direction: column;
+        height: 100%;
         width: 100%;
-        height: 150px;
-        &:first-of-type {
-          border-top: 1px solid rgba(66, 66, 67, 0.2);
-        }
-        .delete-cart-item-button {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          width: 1.25rem;
-          height: 1.25rem;
-          position: absolute;
-          top: 4px;
-          right: 0;
-          color: $red;
-          border: 1px solid rgba(66, 66, 67, 0.2);
-          span {
-            position: absolute;
-            width: 75%;
-            height: 1px;
-            background-color: $black;
-            &:nth-of-type(1) {
-              transform: rotate(45deg);
-            }
-            &:nth-of-type(2) {
-              transform: rotate(-45deg);
-            }
-          }
-        }
-        .cart-item-image-wrapper {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          width: 20%;
-          height: 100%;
-          overflow: hidden;
-          &.horizontal {
-            img {
-              width: 100%;
-              height: auto;
-            }
-          }
-          img {
-            height: 100%;
-          }
-        }
-        .cart-item-description-wrapper {
-          display: flex;
-          flex-direction: column;
-          width: 30%;
-          .cart-item-name {
-          }
-          .cart-item-brand {
-            font-size: 0.875rem;
-            color: rgba(66, 66, 67, 0.6);
-          }
-        }
-        .cart-item-quantity-controls-wrapper {
+        overflow-y: scroll;
+        .cart-item-wrapper {
           position: relative;
+          padding: 4px 0;
+          border-bottom: 1px solid rgba(66, 66, 67, 0.2);
           display: flex;
-          justify-content: center;
+          justify-content: space-between;
           align-items: center;
-          width: 25%;
-          max-width: 80px;
-          height: 40px;
-          border-radius: 100vw;
-          background-color: $white;
-          .control-wrapper {
+          width: 100%;
+          height: 150px;
+          &:first-of-type {
+            border-top: 1px solid rgba(66, 66, 67, 0.2);
+          }
+          .delete-cart-item-button {
             display: flex;
             justify-content: center;
             align-items: center;
-            font-size: 1rem;
-            width: 1.2rem;
-            height: 1.2rem;
+            width: 1.25rem;
+            height: 1.25rem;
             position: absolute;
-            background-color: $black;
-            border-radius: 50%;
-            color: $background-color;
-            border: none;
-            &.minus {
-              left: -0.3rem;
-            }
-            &.plus {
-              right: -0.3rem;
+            top: 4px;
+            right: 0;
+            color: $red;
+            border: 1px solid rgba(66, 66, 67, 0.2);
+            span {
+              position: absolute;
+              width: 75%;
+              height: 1px;
+              background-color: $black;
+              &:nth-of-type(1) {
+                transform: rotate(45deg);
+              }
+              &:nth-of-type(2) {
+                transform: rotate(-45deg);
+              }
             }
           }
-          .quantity-wrapper {
+          .cart-item-image-wrapper {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 20%;
+            height: 100%;
+            overflow: hidden;
+            &.horizontal {
+              img {
+                width: 100%;
+                height: auto;
+              }
+            }
+            img {
+              height: 100%;
+            }
           }
-        }
-        .cart-item-price-wrapper {
-          width: 3.5rem;
-          display: flex;
-          justify-content: right;
+          .cart-item-description-wrapper {
+            display: flex;
+            flex-direction: column;
+            width: 30%;
+            gap: 4px;
+            .cart-item-name {
+              font-size: 0.9rem;
+            }
+            .cart-item-brand {
+              font-size: 0.875rem;
+              color: rgba(66, 66, 67, 0.6);
+            }
+          }
+          .cart-item-quantity-controls-wrapper {
+            position: relative;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 25%;
+            max-width: 60px;
+            height: 40px;
+            border-radius: 100vw;
+            background-color: $white;
+          }
+          .cart-item-price-wrapper {
+            width: 3.5rem;
+            display: flex;
+            justify-content: right;
+          }
+          .plus-icon {
+            position: absolute;
+            top: 50%;
+            left: 100%;
+            transform: translate(-75%, -50%);
+            color: $black;
+          }
+          .minus-icon {
+            color: $black;
+            position: absolute;
+            top: 0;
+            left: 0;
+            top: 50%;
+            left: 0%;
+            transform: translate(-25%, -50%);
+          }
         }
       }
     }
